fixed cart responsive issue where item name collapsed to next line

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -533,91 +533,4 @@ footer {
 // --------------------------------------------------
 // Responsive Styles
 // --------------------------------------------------
-@media screen and (max-width: 990px) {
-
-	header {
-
-		nav {
-			position: relative;
-			z-index: 100;
-
-			#menuIcon {
-				display: inline-block;
-			}
-
-			#menuContent {
-				display: none;
-				background-color: $color-black-dark;
-				padding: 0;
-				position: absolute;
-				top: 65px;
-				right: 0;
-			}
-
-			ul {
-
-				li {
-					min-width: 180px;
-					padding: 20px;
-				}
-			}
-
-			&:hover {
-
-				#menuIcon {
-					background-color: $color-mint-light;
-				}
-
-				#menuContent {
-					display:block;
-				}
-			}
-		}
-	}
-
-	.featured {
-
-		.featured-item {
-
-			.featured-description {
-
-				.description {
-					display: none;
-				}
-			}
-		}
-	}
-
-	footer {
-
-		nav,
-		.logo,
-		.resources,
-		.support {
-			margin-bottom: 40px;
-		}
-	}
-
-	.item-cart {
-		right: 0;
-
-		.items {
-
-			div {
-
-				p {
-					width: 95px;
-
-					&.item-color,
-					&.item-date {
-						display: none;
-					}
-
-					&.item-remove {
-						width: 50px;
-					}
-				}
-			}
-		}
-	}
-}
+@import '_responsive.scss';
